--- a/demo.html
+++ b/demo.html
@@ -97,7 +97,7 @@
     </div> -->
     <input class="new-input" type="text" placeholder="输入信息">
 
-    <a href="weixin://" data-android-href="http://a.app.qq.com/o/simple.jsp?pkgname=com.huizuche.app" data-ios-href="https://itunes.apple.com/cn/app/id995915747"
+    <a href="huizuche://" data-android-href="http://a.app.qq.com/o/simple.jsp?pkgname=com.huizuche.app" data-ios-href="https://itunes.apple.com/cn/app/id995915747"
         class='open-btn'>免费下载</a>
 
     <a href="/test/test.html" class="open">去新的测试页面</a>
