--- a/test.html
+++ b/test.html
@@ -220,7 +220,7 @@
 		console.log(date);
 
 		var date = '2018,10,06,11,00,00';
-		$(".date").text(new Date(2018, 10, 06, 11, 00, 00));
+		$(".date").text(new Date('2018/10/06 11:34:56'));
 
 
 		// var weixinConfigData = {};
