--- a/test.html
+++ b/test.html
@@ -158,44 +158,53 @@
 			transform: translateY(-50px);
 		}
 	}
-</style>
-<script>
-	var fnTextPopup = function (arr, options) {
-		// arr参数是必须的
-		if (!arr || !arr.length) {
-			return;
-		}
-		// 主逻辑
-		var index = 0;
-		document.documentElement.addEventListener('click', function (event) {
-			var x = event.pageX, y = event.pageY;
-			var eleText = document.createElement('span');
-			eleText.className = 'text-popup';
-			this.appendChild(eleText);
-			if (arr[index]) {
-				eleText.innerHTML = arr[index];
-			} else {
-				index = 0;
-				eleText.innerHTML = arr[0];
-			}
-			// 动画结束后删除自己
-			eleText.addEventListener('animationend', function () {
-				eleText.parentNode.removeChild(eleText);
-			});
-			// 位置
-			eleText.style.left = (x - eleText.clientWidth / 2) + 'px';
-			eleText.style.top = (y - eleText.clientHeight) + 'px';
-			// index递增
-			index++;
-		});
-	};
 
-	fnTextPopup(['富强', '民主', '文明', '和谐', '自由', '平等', '公正', '法治', '爱国', '敬业', '诚信', '友善']);
-</script>
+	/* .outer {
+		width: 100%;
+		height: 200px;
+		background: darkblue;
+	}
+
+	.left {
+		width: 200px;
+		height: 200px;
+		float: left;
+		background: #0fbc8b;
+	}
+
+	.right {
+		height: 200px;
+		background: #fac;
+	} */
+	.outer {
+		width: 100%;
+		height: 200px;
+		background: darkblue;
+		position: relative;
+	}
+
+	.left {
+		width: 200px;
+		height: 200px;
+		background: #0fbc8b;
+	}
+
+	.right {
+		position: absolute;
+		top: 0;
+		right: 0;
+		height: 200px;
+		left: 200px;
+		background: #fac;
+	}
+</style>
 
 <body>
-	<canvas id="canvas" style="position:absolute;width:100%;height:100%;background:#000;" width="1920" height="1080"></canvas>
-
+	<!--左边宽度固定，右边自适应-->
+	<div class="outer">
+		<div class="left">左侧固定宽度</div>
+		<div class="right">右侧自适应</div>
+	</div>
 	<!--1px边框bug测试-->
 	<p class="ip-item-label">
 		<label>一人投保 全车人受益</label>
@@ -236,6 +245,40 @@
 	<!-- <script src="https://m.zuzuche.com/w/tidl/js/clipboard1_6/clipboard.min.js"></script> -->
 	<!-- <script src="https://cdn.bootcss.com/clipboard.js/2.0.0/clipboard.js"></script> -->
 	<script src="https://cdn.bootcss.com/clipboard.js/1.6.0/clipboard.js"></script>
+	<script>
+		// var i = 0, aa = function () { console.log(i += 1) }; setInterval(aa, 1000)
+		var fnTextPopup = function (arr, options) {
+			// arr参数是必须的
+			if (!arr || !arr.length) {
+				return;
+			}
+			// 主逻辑
+			var index = 0;
+			document.documentElement.addEventListener('click', function (event) {
+				var x = event.pageX, y = event.pageY;
+				var eleText = document.createElement('span');
+				eleText.className = 'text-popup';
+				this.appendChild(eleText);
+				if (arr[index]) {
+					eleText.innerHTML = arr[index];
+				} else {
+					index = 0;
+					eleText.innerHTML = arr[0];
+				}
+				// 动画结束后删除自己
+				eleText.addEventListener('animationend', function () {
+					eleText.parentNode.removeChild(eleText);
+				});
+				// 位置
+				eleText.style.left = (x - eleText.clientWidth / 2) + 'px';
+				eleText.style.top = (y - eleText.clientHeight) + 'px';
+				// index递增
+				index++;
+			});
+		};
+
+		fnTextPopup(['富强', '民主', '文明', '和谐', '自由', '平等', '公正', '法治', '爱国', '敬业', '诚信', '友善']);
+	</script>
 	<script>
 		var arr = [];
 		if (arr && arr.length > 0) {
