--- a/test.html
+++ b/test.html
@@ -1,33 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<title>android or ios</title>
 </head>
+
 <body>
 	<style>
-		#btn{
+		#btn {
 			width: 200px;
 			height: 100px;
-			border:1px solid #23e34c;
+			border: 1px solid #23e34c;
 			text-align: center;
 			line-height: 100px;
 			border-radius: 5px;
 		}
 	</style>
 	<div id="btn">点击测试浏览器环境</div>
-
+	<p id="demo">点击这个按钮，获得您的坐标：</p>
+	<button onclick="getLocation()">试一下</button>
 	<script>
 		var btn = document.getElementById('btn');
-		btn.onclick = function(){
+		btn.onclick = function () {
 			alert(111)
 		}
 
 		var u = navigator.userAgent;
-        var isAndroid = u.indexOf('Android') > -1 || u.indexOf('Adr') > -1; //android终端
-        var isiOS = !!u.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/); //ios终端
-        alert('是否是Android：'+isAndroid);
-        alert('是否是iOS：'+isiOS);
-</script>
+		var isAndroid = u.indexOf('Android') > -1 || u.indexOf('Adr') > -1; //android终端
+		var isiOS = !!u.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/); //ios终端
+		alert('是否是Android：' + isAndroid);
+		alert('是否是iOS：' + isiOS);
+	</script>
+
+	<script>
+		var x = document.getElementById("demo");
+		function getLocation() {
+			if (navigator.geolocation) {
+				navigator.geolocation.getCurrentPosition(showPosition, showError);
+			}
+			else { x.innerHTML = "Geolocation is not supported by this browser."; }
+		}
+		function showPosition(position) {
+			x.innerHTML = "Latitude: " + position.coords.latitude +
+				"<br />Longitude: " + position.coords.longitude;
+		}
+		function showError(error) {
+			switch (error.code) {
+				case error.PERMISSION_DENIED:
+					x.innerHTML = "User denied the request for Geolocation."
+					break;
+				case error.POSITION_UNAVAILABLE:
+					x.innerHTML = "Location information is unavailable."
+					break;
+				case error.TIMEOUT:
+					x.innerHTML = "The request to get user location timed out."
+					break;
+				case error.UNKNOWN_ERROR:
+					x.innerHTML = "An unknown error occurred."
+					break;
+			}
+		}
+	</script>
 </body>
+
 </html>
