--- a/getLocation.html
+++ b/getLocation.html
@@ -11,6 +11,7 @@
 <button onclick="getLocation()">试一下</button>
 <script>
 var x=document.getElementById("demo");
+getLocation();
 function getLocation()
   {
   if (navigator.geolocation)
