--- a/demo.html
+++ b/demo.html
@@ -47,10 +47,6 @@
     }
 
     .module .img-box {
-        display: -webkit-flex;
-        display: -moz-box;
-        display: -ms-flexbox;
-        display: flex;
         padding: 0 .2rem;
         -webkit-justify-content: space-between;
         -moz-box-pack: justify;
@@ -63,6 +59,8 @@
     .module img {
         width: 3.49rem;
         display: block;
+        font-size: .24rem;
+        float: left;
     }
 </style>
 
