--- a/demo.html
+++ b/demo.html
@@ -55,6 +55,11 @@
         margin-top: .32rem;
         padding-bottom: .6rem;
     }
+    .img-box::after{
+        content: "";
+        display: block;
+        clear: both;
+    }
 
     .module img {
         width: 3.49rem;
