--- a/demo.html
+++ b/demo.html
@@ -29,6 +29,9 @@
     </script>
 </head>
 <style>
+    body{
+        margin: 0;
+    }
     .oval-wrap {
         width: 50%;
         height: 20px;
